--- a/backend/package.json
+++ b/backend/package.json
@@ -40,7 +40,7 @@
     "migration:create": "Creates new migration for manual entry, used like > pnpm migration:create ./src/db/migrations/MyNewMigrationName.  Run typeorm:updateDatasource after this to update the datasource file.",
     "migrations:generate": "Auto-generates a new migration based on any entity changes you made to your JS files, used like > pnpm migration:generate ./src/db/migrations/IpHistoryAddMethod  Run typeorm:updateDatasource after this to update the datasource file.",
     "migration:revert": "Undoes the most recent migration, can be called multiple times in a row",
-    "seed": "Starts PSU food carts in seed mode (Create default database entries), used like > pnpm seed",
+    "seed": "Starts Doggr in seed mode (Create default database entries), used like > pnpm seed",
     "generateDocs": "Auto generates a doc site from JSDoc comments in your code after building",
     "gitSync": "Run this immediately after 'git pull' to update your local database to match the new commit"
   },
@@ -48,14 +48,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
+    "@fastify/jwt": "^6.7.0",
     "@fastify/middie": "^8.1.0",
     "@fastify/static": "^6.8.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "fastify": "^4.11.0",
     "fastify-cors": "^6.1.0",
     "fastify-env": "^2.2.0",
     "fastify-plugin": "^4.5.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
     "pino": "^8.8.0",
     "reflect-metadata": "^0.1.13",
@@ -66,7 +70,9 @@
     "@faker-js/faker": "^7.6.0",
     "@swc/cli": "^0.1.60",
     "@swc/core": "^1.3.32",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
