--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,44 @@
 version: '3'
 services:
+  backend:
+    container_name: backend
+    build: ./backend/
+    restart: always
+    ports:
+      - "8080:8080"
+    environment:
+      - VITE_DB_HOST=postgres
+      - VITE_IP_ADDR=0.0.0.0
+      - VITE_PORT=8080
+      - VITE_LOGS_DIR=logs/
+      - VITE_DB_PORT=5433
+      - VITE_DB_USER=rajashree
+      - VITE_DB_PASS=rajashree
+      - VITE_DB_NAME=psu_foodcarts
+    depends_on:
+      - postgres
+
+  frontend:
+    container_name: frontend
+    build: ./frontend/
+    restart: always
+    ports:
+      - "88:80" # We need to map here for convenience, so we don't conflict with a potential possible local server
+    environment:
+      - VITE_BACKEND_IP=backend
+      - VITE_BACKEND_PORT=8080
+
+  microservice:
+    container_name: microservice
+    build: ./microservice/
+    restart: always
+    ports:
+      - "3333:3333"
+    environment:
+      - DATABASE_URL=postgres://rajashree:rajashree@postgres/psu_foodcarts
+    depends_on: #This is a lie
+      - postgres
+
   postgres:
     container_name: psu_foodcarts
     image: postgres:15-alpine
@@ -12,21 +51,7 @@ services:
       - POSTGRES_USER=rajashree
       - POSTGRES_PASSWORD=rajashree
       - POSTGRES_DB=psu_foodcarts
-    #network_mode: host
-#  backend:
-#    container_name: backend
-#    build: ./backend/
-#    restart: always
-#    ports:
-#      - "8080:8080"
-#    environment:
-#      # Vite takes care of most of this for us, but it's good practice for other backends
-#      - VITE_DB_HOST=postgres
-#      - VITE_IP_ADDR=0.0.0.0
-#      - VITE_PORT=8080
-#      - VITE_LOGS_DIR=logs/
-#    depends_on: #This is a lie
-#      - postgres
+
 volumes:
   db:
     driver: local
