--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2"
   },
   "devDependencies": {
+    "@auth0/auth0-react": "^2.0.1",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -33,7 +35,6 @@
     "msw": "^1.1.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
-    "vitest": "^0.27.1",
-    "@auth0/auth0-react": "^2.0.1"
+    "vitest": "^0.27.1"
   }
 }
