--- a/microservice/Dockerfile
+++ b/microservice/Dockerfile
@@ -4,6 +4,6 @@ COPY . /app
 
 WORKDIR /app
 
-RUN pip3 install -r requirements.txt
+RUN python -m pip install -r requirements.txt
 
 CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
