--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite-node -w src/index.ts",
     "build": "vite build --emptyOutDir -c vite.config.ts -m development",
-    "startProd": "http-server -p 808clewc0 build/",
+    "startProd": "http-server -p 8080 build/",
     "lint": "eslint . --ext .ts",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest --passWithNoTests",
